ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-20211215
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo-20211215.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service-20211215
            port:
              number: 80
